2007-03-25  TAKAOKA Kazuma  <kazum-ta@jeans.ocn.ne.jp>

	* lib/parse.c (set_anno):
	* lib/print.c (print_anno):
	print annotations correctly
	
	* lib/tokenizer.c (cha_tok_parse): fix for hangup when anno->len2 is 0

	* lib/chalib.c (chasen_parse_segments): read outputs of ChaSen

	* lib/literal.c (cha_set_encode): add '-i u' for UTF-8
	
	* lib/init.c (eval_chasenrc_sexp): add 'ENCODE' predicate
	
2007-03-15  Asahara Masayuki  <masayu-a@is.naist.jp>

	* lib/parse.c (set_anno): 
	Annotation output
	Thanks to Yasuharu Den
	
	* lib/print.c (print_anno): 
	Annotation output
	Thanks to Yasuharu Den

2007-03-14  Asahara Masayuki  <masayu-a@is.naist.jp>

	* lib/dartsdic.cpp : 
	for darts-0.31

2007-03-13  Asahara Masayuki  <masayu-a@is.naist.jp>

	* mkchadic/makemat.c (REN_TBL_MAX): 
	for unidic RENSETU table

	* lib/dartsdic.cpp (da_open): 
	for darts-0.3 

2005-12-01  Masayuki Asahara  <masayu-a@is.naist.jp>

	* lib/dartsdic.cpp (da_open): 
	[chasen-users:00567]	
	Thanks to NOKUBI Takatsugu
	
	* mkchadic/makemat.c (read_rensetu): 
	[chasen-users:00483]
	Thanks to NOKUBI Takatsugu

2004-07-13  Masayuki Asahara  <masayu-a@is.naist.jp>

	* lib/dartsdic.cpp (da_build_dump): 
	[chasen-users:00444]
	Thanks to NOKUBI Takatsugu
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=258568


2003-11-25  TAKAOKA Kazuma  <kazuma-t@is.aist-nara.ac.jp>

	* lib/chalib.c (seg_tokenize): Change the format for the partial
	analyzing mode.

2003-11-21  TAKAOKA Kazuma  <kazuma-t@is.aist-nara.ac.jp>

	* Marge the codes of the normal mode and the partial analyzing
	mode.
	
2003-11-13  TAKAOKA Kazuma  <kazuma-t@is.aist-nara.ac.jp>

	* lib/chalib.c (chasen_parse_segments): Optimize the loops.

2003-11-11  TAKAOKA Kazuma  <kazuma-t@is.aist-nara.ac.jp>

	* Add partial analyzing mode.

2003-10-24  TAKAOKA Kazuma  <kazuma-t@is.aist-nara.ac.jp>

	* lib/mmap.c (mmap_file): Shared file handles in Win32.

2003-08-28  TAKAOKA Kazuma  <kazuma-t@is.aist-nara.ac.jp>
